kubernetes/catalog/speedtest-tracker/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/VandaLpr/unRAID-CA-templates/master/templates/speedtest-tracker.xml
# Category: Tools-Utilities
# Stars: 168 | Downloads: 20192888
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-tracker
  namespace: speedtest-tracker
  labels:
    app.kubernetes.io/name: speedtest-tracker
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: speedtest-tracker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: speedtest-tracker
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: speedtest-tracker
          image: henrywhitaker3/speedtest-tracker
          ports:
            - containerPort: 80
              protocol: TCP
              name: webui
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 30
            failureThreshold: 10
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 30
            failureThreshold: 10
          volumeMounts:
            - name: speedtest-tracker-data-0
              mountPath: "/config"
          securityContext:
            runAsNonRoot: false
            allowPrivilegeEscalation: false
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
      - name: speedtest-tracker-data-0
        persistentVolumeClaim:
          claimName: speedtest-tracker-data-0
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest-tracker
  namespace: speedtest-tracker
  labels:
    app.kubernetes.io/name: speedtest-tracker
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: speedtest-tracker
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: webui
  type: ClusterIP
