kubernetes/catalog/speedtest-tracker/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: speedtest-tracker
  namespace: speedtest-tracker
  labels:
    app.kubernetes.io/name: speedtest-tracker
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`speedtest-tracker.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: speedtest-tracker
          port: 80
  tls:
    secretName: int-rlservers-com-tls
